<resources>
    <string name="app_name">MySedekah</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Log Out</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_register">Register</string>
    <string name="action_search">Search</string>
    <string name="action_comments">Comments/Feedback</string>
    <string name="title_activity_login">User Login</string>
    <string name="title_payment">PaymentActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_donate_application">DonateApplication</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="invalid_mobile">Please Enter a Valid Number</string>
    <string name="invalid_email">Please Enter a Valid Email</string>
    <string name="invalid_confirm_password">Password does not match</string>
    <string name="invalid_bank">Please Enter a Valid Bank</string>
    <string name="invalid_accountNumber">Please Enter a Valid Account Number</string>
    <string name="title_activity_donation">DonationActivity</string>
    <string name="thanks">Thanks for your donation!</string>
    <string name="back">Go Back</string>
    <string name="pay">Pay</string>
</resources>