<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_register"
        android:title="@string/action_register"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_comments"
        android:title="@string/action_comments"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/loveicon"
        android:title="@string/action_favourite"
        app:showAsAction="ifRoom"  />

    <item
        android:id="@+id/test_edit"
        android:title="Modify Campaign"
        app:showAsAction="never"  />

    <item
        android:id="@+id/donation_history"
        android:title="Donation History"
        app:showAsAction="never"  />


</menu>